# mcflow

./: LICENSE  README.md  gitignore  pyproject.toml
src/mcflow/: __init__.py  aggregation.py  bmc.py  distributions.py  estimators.py  importance.py  integration.py  mcmc.py  plotting.py  sampling.py  simulation.py
tests/: __init__.py  test_sampling.py
